update on mnist

--- a/mnist_example.ipynb
+++ b/mnist_example.ipynb
@@ -4962,7 +4962,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# stack jacobians and add the resultant tensor to hessian\n",
+    "# then we take the mean on hessian to get its dimension to [1,10]\n",
+    "# we then add it to y_hat\n",
+    "# the resultant vector will give probability distribution for noisy '9' in our case.\n",
+    "\n",
+    "# WIP"
+   ]
   }
  ],
  "metadata": {
